[gd_scene load_steps=4 format=3 uid="uid://6gpcwklbsfer"]

[ext_resource type="Script" uid="uid://b8uurge1hxhap" path="res://scripts/game.gd" id="1_kvpfn"]
[ext_resource type="PackedScene" uid="uid://cwcowkdxfktk0" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://bxl0yp7ku833q" path="res://scenes/ui/ui.tscn" id="2_dinhu"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("ui")]
script = ExtResource("1_kvpfn")
player_scene = ExtResource("1_uwrxv")
ui = NodePath("UI")

[node name="UI" parent="." instance=ExtResource("2_dinhu")]

[connection signal="become_host" from="UI" to="." method="_on_ui_become_host"]
[connection signal="join_as_player_2" from="UI" to="." method="_on_ui_join_as_player_2"]
[connection signal="start_game" from="UI" to="." method="_on_ui_start_game"]
